--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +18,19 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.section {
+  padding: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.prompt-input {
+  width: 100%;
+  height: 100px;
+}
+
+.progress {
+  color: white;
+  border-radius: 5px;
+  height: 50px;
+  border: none;
+  background-color: rgb(38, 166, 224);
 }
