--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
   pointer-events: none;
 }
 
+button {
+  cursor: pointer;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,9 +26,27 @@
   padding: 50px;
 }
 
+.section--followup-prompt {
+  padding-bottom: 0px;
+}
+
 .prompt-input {
   width: 100%;
   height: 100px;
+  margin-top: 20px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.submit-button {
+  border: none;
+  color: white;
+  background-color: darkred;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 .progress {
@@ -33,4 +55,24 @@
   height: 50px;
   border: none;
   background-color: rgb(38, 166, 224);
+  padding: 15px;
+}
+
+.download-container {
+  border-radius: 5px;
+  height: 50px;
+  background-color: rgb(99, 218, 175);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  margin: 0 auto;
+}
+
+.download-link:visited,
+.download-link:hover,
+.download-link:active,
+.download-link:link {
+  color: white;
+  text-decoration: none;
 }
