--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding: 50px;
 }
 
 .App-logo {
@@ -36,17 +37,13 @@ button {
   margin-top: 20px;
 }
 
-.button-container {
-  display: flex;
-  justify-content: space-around;
-}
-
 .submit-button {
   border: none;
   color: white;
   background-color: darkred;
   padding: 10px;
   border-radius: 5px;
+  width: 200px;
 }
 
 .progress {
@@ -65,7 +62,6 @@ button {
   display: block;
   color: white;
   text-decoration: none;
-
   border-radius: 5px;
   height: 50px;
   background-color: rgb(99, 218, 175);
@@ -74,4 +70,9 @@ button {
   justify-content: center;
   width: 200px;
   margin: 0 auto;
+}
+
+.system-message {
+  width: 100%;
+  margin-bottom: 20px;
 }
